--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.7.0",
     "node-sass": "^6.0.0",
+    "sass": "^1.32.13",
     "sass-loader": "^10.1.1"
   }
 }
